--- a/views/viewemployee.ejs
+++ b/views/viewemployee.ejs
@@ -26,6 +26,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/searchEmployee">Search employee</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/deleteEmp">Delete Employee</a>
+                  </li>
               </ul>
             </div>
           </nav>
